[package]
name = "lean-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.release]
# debug = true

[dependencies]
lean-sys = { git = "https://github.com/SchrodingerZhu/lean-sys/", branch = "fix-init-std", default-features = false, features = ["small_allocator"] }
lean-base = { path = "./base", version = "0.1.0" }

[features]

[workspace]
members = [
  "base",
  "build"
]
